--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
       - run:
           name: Setup
           command: |
-            apt-get update
-            apt-get install docker-cli
+            sudo apt-get update
+            sudo apt-get install docker-cli
             go get -u golang.org/x/lint/golint
       - run:
           name: "Test"
