--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - image: cimg/go:1.14-node
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: Setup
           command: |
