--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,6 @@ jobs:
           name: "Generate Semantic Release"
           command: "npx semantic-release"
       - run:
-          name: "Tag Image"
-          command: |
-            TAG=build_$CIRCLE_BUILD_NUM
-            docker tag oauth-revokerd:$TAG oauth-revokerd:$(git describe --abbrev=0 --tags || $TAG)
-      - run:
           name: "Push Docker Image"
           command: |
             echo "$DOCKER_API_KEY" | docker login --username $DOCKER_USER --password-stdin
@@ -36,7 +31,5 @@ jobs:
             docker pull oauth-revokerd:$BRANCH
 
             VERSION=$(git describe --abbrev=0 --tags || $TAG)
-            echo $VERSION
-            echo "oauth-revokerd:$VERSION"
-            docker tag oauth-revokerd:$TAG oauth-revokerd:$VERSION
+            docker tag oauth-revokerd:$TAG willhackett/oauth-revokerd:$VERSION
             docker push oauth-revokerd:$VERSION
